# simplipy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CAPABILITY_GAP_ANALYSIS.md  CHANGELOG.md  Cargo.toml  PHASE_B_OFFLINE_PLAN.md  README.md  deny.toml  mkdocs.yml  pylint.cfg  pyproject.toml  readthedocs.yaml  requirements.txt  rust-toolchain.toml
.github/: copilot-instructions.md
.github/workflows/: codeql.yaml  pre-commit.yml  publish.yml  pytest.yml  python-publish.yml
benchmarks/: mine_grid.py  remine_validate.py  run_full_mine.py
configs/: create_dev.yaml  create_dev_5-2.yaml  create_dev_7-2.yaml  create_dev_7-3.yaml  dev.yaml  dev_7-2.yaml
data/rules/: dev.json  dev_7-2.json  dev_7-3.json
data/test/: expressions_10k.json
docs/: CONVERSION_QUIRKS.md  api.md  index.md  requirements.txt  rules.md
docs/api/: asset_manager.md  engine.md  index.md  io.md  operators.md  utils.md
rust/: cancel.rs  convert.rs  engine.rs  eval.rs  fit.rs  lib.rs  numeric.rs  operators.rs  parse.rs  rules.rs  sort.rs  utils.rs  worker.rs
src/simplipy/: __init__.py  __main__.py  _core.pyi  asset_manager.py  backend.py  engine.py  io.py  normalization.py  operators.py  utils.py
tests/: test__dummy.py  test_asset_manager.py  test_cli.py  test_conversion_quirk_fixes.py  test_engine_simplification.py  test_equivalence.py  test_io.py  test_normalization.py  test_prefix_infix.py  test_utils.py
