[project]
name = "simplipy"
description = "Efficient Simplification of Mathematical Expressions"
authors = [
    {name = "Paul Saegert"},
    ]
readme = "README.md"
requires-python = ">=3.11"
version = "0.3.1"
license = "MIT"
license-files = ["LICEN[CS]E*"]
keywords = ["symbolic-regression", "simplification", "expression", "prefix", "rewriting", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
# The INLINE phase (simplify + conversions + validation) is the compiled Rust `simplipy._core`;
# the OFFLINE phase (rule mining + curve_fit) stays pure Python. numpy/scipy are offline-only at
# runtime, huggingface_hub powers asset resolution, platformdirs resolves the asset cache directory.
dependencies = [
    "huggingface_hub",
    "numpy",
    "platformdirs",
    "pyyaml",
    "scipy",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/psaegert/simplipy"
Issues = "https://github.com/psaegert/simplipy/issues"
PyPI = "https://pypi.org/project/simplipy/"
ReadtheDocs = "https://simplipy.readthedocs.io/"

[project.scripts]
simplipy = "simplipy.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "pygount",
    "types-tqdm",
    "types-toml",
    "types-PyYAML",
    "radon",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-autorefs",
    "mkdocstrings",
    "mkdocs-get-deps",
    "mkdocs-material-extensions",
    "mkdocstrings-python"
]
torch = [
    "torch>=1.0.0"
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Mixed layout: Python package at src/simplipy/ (unchanged src-layout); the compiled inline core is
# placed at simplipy/_core. The Rust crate lives under rust/ (Cargo.toml [lib] path = "rust/lib.rs").
python-source = "src"
module-name = "simplipy._core"
features = ["pyo3/extension-module"]


[tool.flake8]
ignore = ["E501", "W503"]
exclude = [
    ".git",
	"__pycache__",
	"build",
	"target",
	"venv",
	".venv",
	"env",
	".env",
]
per-file-ignores = "__init__.py:F401"


[tool.mypy]
no_implicit_optional = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
exclude = "(.venv|tests/|dev/|benchmarks/)"
ignore_missing_imports = true


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
